Tue Jun 13 14:22:06 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added the java stuff to the bindings.  Needs some work to get it
	  nicely integrated.

Tue Jun 13 13:07:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Made multiexpand1 slightly more rigourous.

Tue Jun 13 12:44:01 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* API change: renamed OmExpandOptions::use_query_terms() to
	  OmExpandOptions::set_use_query_terms().  This is to be consistent
	  with OmMatchOptions' naming scheme.

	* API addition: added OmExpandOptions::use_exact_termfreq() to
	  allow disabling of termfreq approximation in ExpandWeight.

	* Update apitest to test API addition - enabled "multiexpand1": now
	  passes (but isn't as rigourous as I'd like).

Tue Jun 13 12:04:15 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change ExpandWeight::get_bits() to take a document length, rather
	  than a normalised document length.  Normalise document lengths
	  across collection rather than across each sub-database.

	* Add an option to ExpandWeight to use the exact term frequency,
	  rather than approximate it.  (Currently set to false)

	* Fix formatting of output from testsuite.cc

Mon Jun 12 18:45:56 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix to omdebug.cc to get around a compiler borkenness.

Mon Jun 12 18:35:54 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added initial OmEnquire and OmDatabaseGroup stuff to
	  Python/Perl5 bindings.  Python works, but Perl5 crashes.

Mon Jun 12 18:22:00 BST 2000 Olly Betts

	* NEAR now works

Mon Jun 12 17:36:00 BST 2000 Olly Betts

	* get_position_list() now returns a pointer instead of a reference

	* More work on NEAR operator

Mon Jun 12 16:58:00 BST 2000 Olly Betts

	* Added NEAR operator (currently compiles but doesn't working)

Mon Jun 12 16:17:00 BST 2000 Olly Betts

	* Added skip_to() method to PositionList class	
