@@ -1,3 +1,8 @@
+Tue Jun 13 14:31:00 BST 2000 Olly Betts
+
+	* Factored out code to build optimal AND and OR trees into separate
+	  methods
+
 Tue Jun 13 14:22:06 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Added the java stuff to the bindings.  Needs some work to get it
